Remove unused extraction functionality and update result heading in popup

--- a/popup.html
+++ b/popup.html
@@ -8,13 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Selected Text — First 10 Words</h1>
-    <div id="status">Ready</div>
-    <div class="controls">
-      <button id="extract">Get First 10 Words of Selection</button>
-    </div>
     <div id="resultContainer" class="hidden">
-      <h2>First 10 Words</h2>
+      <h2>Headline:</h2>
       <div id="result"></div>
       <button id="copy">Copy</button>
     </div>
