Update summarization type to TL;DR and include source URL in results

--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,10 @@
 <body>
   <div class="container">
     <div id="resultContainer" class="hidden">
-      <h2>Headline:</h2>
+      <h3>TL;DR:</h3>
       <div id="result"></div>
       <button id="copy">Copy</button>
+      <div id="status"></div>
     </div>
   </div>
   <script src="popup.js"></script>
