Add loading spinner and update result heading in popup

--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <div class="container">
+    <div id="loadingContainer" class="hidden">
+      <div class="loading-spinner"></div>
+      <div class="loading-text">Summarizing...</div>
+    </div>
     <div id="resultContainer" class="hidden">
-      <h3>TL;DR:</h3>
+      <h2>TL;DR</h2>
       <div id="result"></div>
       <button id="copy">Copy</button>
       <div id="status"></div>
