Update popup title to reflect AI-powered summarizer functionality

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Selected Text — First 10 Words</title>
+  <title>AI-powered Summarizer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
