--- a/options.html
+++ b/options.html
@@ -32,7 +32,7 @@
   <div class="option-group">
     <label for="type">Summarization Type:</label>
     <select id="type">
-      <option value="tldr">TLDR</option>
+      <option value="tldr">TL;DR</option>
       <option value="teaser">Teaser</option>
       <option value="key-points">Key Points</option>
       <option value="headline">Headline</option>
